Text wrap issue

--- a/src/pages/Settings.css
+++ b/src/pages/Settings.css
@@ -4,3 +4,6 @@ ion-item {
 a {
   text-decoration: none !important;
 }
+.ion-text-wrap {
+  text-wrap: wrap;
+}
